<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/blur"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".BookActivity">

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@color/colorPrimary"
        android:text="@string/limited_product"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/limited_product"
        android:src="@drawable/cool" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="center_horizontal|end"
        app:srcCompat="@drawable/ic_fav" />

    <TextView
        android:id="@+id/textViewBookTitle"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:text="@string/Razer_Gaming_Mouse"
        android:textAlignment="center"
        android:textColor="#cc282b"
        android:textFontWeight="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:fontFamily="@font/pacifico_font"
        android:text="@string/product_description"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="33sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp">

        <Button
            android:id="@+id/add_cart_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/buttons"
            android:text="@string/like"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>