<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/custom_bar"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECECED">

            <ImageView
                android:id="@+id/left_arrow_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/Order"
                android:src="@drawable/ic_right_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:gravity="center_vertical"
                android:text="@string/customer_support"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/here"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/please" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/t2">

        <Button
            android:id="@+id/phone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PHONE"
            android:layout_margin="15dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EMAIL"
            android:layout_margin="15dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textSize="18sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/l1"
        android:orientation="vertical"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/searchh"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/tips"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>



</RelativeLayout>