<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fashion"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:fitsSystemWindows="true"
        android:padding="20dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:background="@drawable/input_design"
        android:fitsSystemWindows="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="401dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/Order"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_transparent" />


    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="5dp"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="80dp"
            android:fitsSystemWindows="true"
            android:text="@string/forget_password"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="25dp"
        android:fitsSystemWindows="true"
        android:text="@string/i_m_an_admin"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:fitsSystemWindows="true"
        android:text="@string/i_m_not_an_admin"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_input"
        android:layout_alignParentStart="true"
        android:fitsSystemWindows="true"
        android:textColorHint="@android:color/white"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/input_design"
            android:fitsSystemWindows="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="#00887C7C"
            android:textSize="20sp"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>