<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/Order"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_transparent" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/register_inputs"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:scrollbarSize="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fitsSystemWindows="true"
        android:autofillHints="" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email_input"
        android:textColorHint="@android:color/white"
        android:layout_alignParentStart="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/colorBlack"
        android:fitsSystemWindows="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_input"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/register_inputs"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fitsSystemWindows="true"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:textColorHint="@android:color/white"
        android:layout_alignParentStart="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleTint="@color/colorBlack"
        android:fitsSystemWindows="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/register_inputs"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fitsSystemWindows="true"/>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/holo_green_light"
        android:fitsSystemWindows="true"
        android:padding="20dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>